Refactored project to maven